2013-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (get_groups): Never return error.  Always create a group list,
	even if it's empty.

2013-05-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* include/cygwin/version.h: Bump api minor number to reflect previous
	change.

2013-05-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* i686.din: Remove _strtold.
	* x86_64.din: Move strtold definition...
	* common.din: ...to here.

2013-05-07  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* fhandler_tty.cc (fhandler_pty_common::__acquire_output_mutex): Never
	wait an INFINITE amount of time.  Instead default to 1/10 second.
	(fhandler_pty_slave::open): Just default to INFINITE wait rather than
	(now) waiting longer than other similar calls.

2013-05-03  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* spawn.cc (ILLEGAL_SIG_FUNC_PTR): New define.
	(system_call_handle): Rename from system_call_cleanup.
	(is_system_call): New convenience method.
	(system_call_handle::system_call_handle): Use ILLEGAL_SIG_FUNC_PTR
	rather than cast.  Call sig_send here rather than in caller.
	Initialize oldint.
	(system_call_handle::arm): New function pulled from constructor.
	(~system_call_handle::system_call_handle): Use is_system_call().
	(child_info_spawn::worker): Use system_call_handle to set up for system
	call early.  Use arm call prior to waiting for child to properly set up
	signal handling.  Move comment closer to code it is commenting on.

2013-05-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* resource.cc (setrlimit): Use consistent commenting style.  Return
	EINVAL when rlim_cur > rlim_max.

2013-04-30  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	Throughout, (mainly in fhandler*) fix remaining gcc 4.7 mismatch
	warnings between regparm definitions and declarations.
	* smallprint.cc (__small_vswprintf): Conditionalize declaration and
	setting of l_opt for only x86_64.
	* spawn.cc (child_info_spawn::worker): Remove unused 'pid' variable.