@@ -12,3 +12,4 @@ What's new:
 Bug fixes:
 ----------
 
+- getgrouplist
